fix(navigator): attribute panel styling bug on firefox

--- a/georegistry-web/src/main/ng2/src/app/registry/component/location-manager/location-manager.css
+++ b/georegistry-web/src/main/ng2/src/app/registry/component/location-manager/location-manager.css
@@ -134,6 +134,7 @@
 	padding: 15px 0;
 	background-color: white;
 	z-index:9;
+	width: 100%;
 	
 	border-color: #6BA542;
     border-color: var(--theme-input-text-border-active);
